# MyOperation

./: CMakeLists.txt  README.md  batch_fix_halcon.ps1  main.cpp
.cache/clangd/index/: CORE1.h.711526FE3C999721.idx  CameraManager.cpp.61AE9B5B21F69DB6.idx  DBNew.h.E61DB8239F9DF44B.idx  HAlloc.h.C6C973CC3CF8B08F.idx  HBarCode.h.2A5D46FA17CB83BB.idx  HBarrier.h.9957AB3B78B7C0D4.idx  HBase.h.7A908D0C47B4F6DC.idx  HBaseGP.h.C1F15281F17E0A9D.idx  HBeadInspectionModel.h.E44D324CCA6D34A6.idx  HBgEsti.h.78DE2EF8083E5822.idx  HCalibData.h.F483E28D4275D4AD.idx  HCamPar.h.F7EBBEB6DBCC1CE2.idx  HCameraSetupModel.h.E0D1C9003B6B0C73.idx  HClassBox.h.61CFE525DE25A6CC.idx  HClassGmm.h.56A26B138EA67C18.idx  HClassKnn.h.DA36F256ABD96117.idx  HClassLUT.h.25C03CEA026068ED.idx  HClassMlp.h.8FB89CF9657AF462.idx  HClassSvm.h.D69C41D8DFFA8577.idx  HClassTrainData.h.72C623985D7F9B2F.idx  HColorTransLUT.h.05798A700E1E0138.idx  HComponentModel.h.085FE98D75357E2A.idx  HComponentTraining.h.027E576D21720056.idx  HComputeDevice.h.266E5C075E5268C0.idx  HCondition.h.92DA2B8D57D974FA.idx  HConst.h.31C4ACC7BEF591FD.idx  HDataBase.h.370FFDF7AC8D14FD.idx  HDataCode2D.h.3A33960A4CB319D5.idx  HDeclSpec.h.6ACAC8A2542389DB.idx  HDeformableModel.h.D96F57BC5037554A.idx  HDeformableSurfaceMatchingResult.h.4C538A166929AA0A.idx  HDeformableSurfaceModel.h.85B4A2B1B037BB6E.idx  HDescriptorModel.h.874866200B9D9C5C.idx  HDevWindowStack.h.57F0C08DE2F48D8C.idx  HDict.h.71869E6F8632280A.idx  HDlClassifier.h.AE9DDD1FFCB23960.idx  HDlClassifierResult.h.DAF202F235D927B9.idx  HDlClassifierTrainResult.h.B01801C5DAB7A870.idx  HDlDevice.h.15935F5B6F91E2B7.idx  HDlModel.h.4313FF309758C802.idx  (+154 more)
docs/: API开发手册.md  CMake学习指南.md  HalconFileManager_Guide.md  Halcon集成手册.md  Modbus_Write_Usage_Guide.md  Modbus通信手册.md  MyOperation_System_User_Manual.md  PIXEL_INFO_DISPLAY.md  PLC_Register_Configuration.md  PLC_Register_Manual.md  SettingManager_User_Manual.md  VisualProcess_QuickReference.md  VisualProcess_UserManual.md  Visual_Processing_Workflow_Guide.md  工作线程参数使用指南.md  架构.md  测量参数传递使用指南.md
examples/: Chinese_Filename_Test.cpp  HalconFileManager_Example.cpp  HalconFileManager_Usage_Example.cpp  ModbusManager_DiagnosticExample.cpp  SettingManager_Example.cpp
inc/config/: SettingManager.h
inc/thread/: visualWorkThread.h
inc/ui/: PLCRegisterTypes.h  mainwindow.h  serialdialog.h  visualprocess.h
src/config/: SettingManager.cpp
src/thread/: visualWorkThread.cpp
src/ui/: PLCRegisterTypes.cpp  mainwindow.cpp  serialdialog.cpp  visualprocess.cpp
ui/resources/: resources.qrc
ui/resources/gif/: 📷 打开相机.gif.baiduyun.uploading.cfg
ui/ui/: SerialDialog.ui  VisualProcess.ui  mainwindow.ui
